# BigDataProject

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml  report.tex  requirements.txt  run_pipeline.sh  streaming_demo.ipynb
models/spark_ml_rf/data/: .part-00000-f3899eb0-683c-45e6-806c-cada121eec5f-c000.snappy.parquet.crc  part-00000-f3899eb0-683c-45e6-806c-cada121eec5f-c000.snappy.parquet
models/spark_ml_rf/metadata/: .part-00000.crc  part-00000
models/spark_ml_rf/treesMetadata/: .part-00000-6573022f-ae08-406e-9a00-2690a7b611e4-c000.snappy.parquet.crc  (+1 more)
outputs/: ml_fi2010_metrics.json  replay_demo_log.txt  spark_ml_fi2010_metrics.json  streaming_demo_log.txt
outputs/20260620_083945/: 01_initial_lob_snapshot.json  02_ml_filter_result.json  03_scenario_results.csv  04_spark_summary.json  05_top5_scenarios.csv  05_top5_scenarios.json  06_wash_trading_community.json  07_shapley_values.csv  07_shapley_values.json  10_final_result.json  manifest.json
outputs/20260621_153840/: 01_initial_lob_snapshot.json  02_ml_filter_result.json  03_scenario_results.csv  04_spark_summary.json  05_top5_scenarios.csv  05_top5_scenarios.json  10_final_result.json  manifest.json
src/cpp/: bindings.cpp  lob.cpp  lob.h
src/python/: binance_ws.py  build_fi2010_ml_dataset.py  convert_fi2010_to_replay.py  generate_datasets.py  inject_spoofing_replay.py  main.py  ml_filter.py  output_recorder.py  redis_manager.py  replay_manipulation.py  search_engine.py  shapley_analyzer.py  spark_engine.py  streaming_engine.py  train_ml_model.py  train_spark_ml_model.py
